reduce logging Improve code quality